# Amazon-Translation-To-Plenty

./: .gitignore  README.md  example_config.ini  main.py  pyproject.toml
test/: sample_data_attributes.py  test_assignment.py  test_conflict_check.py
translation_to_plenty/: __main__.py  cli.py
