[tool.poetry]
name = "translation_to_plenty"
version = "0.1.0"
description = "Upload translations to plentymarkets from amazon flatfiles"
authors = ["Sebastian Fricke <sebastian.fricke.linux@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ['plentymarkets', 'translation', 'csv', 'mapping']
repository = "https://github.com/initBasti/Amazon-Translation-To-Plenty"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
